@@ -5345,22 +5345,11 @@ class="element-name">'feCustom'</span></h2>
         </dl>
         <dl>
             <dt id="feCustomFragmentShaderAttribute">fragmentShader: <code>&lt;uri&gt; | mix(&lt;uri&gt; [ &lt;blend-mode&gt; || &lt;alpha-compositing&gt; ]?)</code></dt>
-            <dd>There are two forms for the fragment shader:
-                <ol>
-                    <li>direct shader reference with a <code>&lt;uri&gt;</code></li>
-                    <li>
-                
-                
-                The shader at &lt;uri&gt; provides the implementation for the <code>feCustom</code>
-                fragment shader. If the 
-                shader cannot be retrieved, or if the shader cannot be loaded or compiled because it contains erroneous code,  the shader is a <a href="#default-shaders">pass through</a>. Otherwise, the fragment shader
-                is invoked for each of the pixels during the rasterization phase that follows
-                the vertex shader processing. 
-                </dd>
+            <dd>See the <a href='#fragmentShader-attribute'>fragmentShader</a> attribute discussion.</dd>
         </dl>
         <dl>
             <dt id="feCustomVertexMeshAttribute">vertexMesh: <code>&lt;integer&gt;{0,2} &lt;box&gt;? [ detached | attached ]?</code></dt>
-            <dd>See the <a href='#vertexMesh-attribute'>vertexMesh</a> attribute discussion</dd>
+            <dd>See the <a href='#vertexMesh-attribute'>vertexMesh</a> attribute discussion.</dd>
         </dl>
         <dl>
             <dt id="feCustomParamsAttribute">params: <code>&lt;param-def&gt; [ , &lt;param-def&gt; ]*</code></dt>
@@ -5435,7 +5424,24 @@ class="element-name">'feCustom'</span></h2>
 }</pre></code>
         </div>
     </div>
-    <h4 id="vertexMesh-attribute">The 'vertexMesh' attribute</h4>
+    <h3 id="fragmentShader-attribute">The 'fragmentShader' attribute</h3>
+
+    <p class="todo">The introduced function mix(...) needs to be described</p>
+
+    <p>There are two forms for the fragment shader:
+    <ol>
+        <li>direct shader reference with a <code>&lt;uri&gt;</code></li>
+        <li>
+    
+    
+    The shader at &lt;uri&gt; provides the implementation for the <code>feCustom</code>
+    fragment shader. If the 
+    shader cannot be retrieved, or if the shader cannot be loaded or compiled because it contains erroneous code,  the shader is a <a href="#default-shaders">pass through</a>. Otherwise, the fragment shader
+    is invoked for each of the pixels during the rasterization phase that follows
+    the vertex shader processing. </li></ol>
+    </p>
+
+    <h3 id="vertexMesh-attribute">The 'vertexMesh' attribute</h3>
 
     <p>The <code>&lt;feCustom&gt;</code>'s 'vertexMesh' attribute defines the granularity of vertices in
         the <a href="#vertex-mesh">shader mesh</a>. By default,
