@@ -358,14 +358,14 @@
     primitive <span class=element-name>‘<code
     class=property>feCustom</code>’</span></a>
     <ul class=toc>
-     <li>
-      <ul class=toc>
-       <li><a href="#vertexMesh-attribute"><span class=secno>32.0.1.
-        </span>The ‘<code class=property>vertexMesh</code>’ attribute</a>
-        
-      </ul>
+     <li><a href="#fragmentShader-attribute"><span class=secno>32.1.
+      </span>The ‘<code class=property>fragmentShader</code>’
+      attribute</a>
 
-     <li><a href="#shader-inputs"><span class=secno>32.1. </span>Shader
+     <li><a href="#vertexMesh-attribute"><span class=secno>32.2. </span>The
+      ‘<code class=property>vertexMesh</code>’ attribute</a>
+
+     <li><a href="#shader-inputs"><span class=secno>32.3. </span>Shader
       inputs in filter graph</a>
     </ul>
 
@@ -11968,18 +11968,8 @@ double turbulence(int nColorChannel, double *point, double <a
      | mix(&lt;uri&gt; [ &lt;blend-mode&gt; || &lt;alpha-compositing&gt;
      ]?)</code>
 
-    <dd>There are two forms for the fragment shader:
-     <ol>
-      <li>direct shader reference with a <code>&lt;uri&gt;</code>
-
-      <li> The shader at &lt;uri&gt; provides the implementation for the
-       <code>feCustom</code> fragment shader. If the shader cannot be
-       retrieved, or if the shader cannot be loaded or compiled because it
-       contains erroneous code, the shader is a <a
-       href="#default-shaders">pass through</a>. Otherwise, the fragment
-       shader is invoked for each of the pixels during the rasterization
-       phase that follows the vertex shader processing.
-     </ol>
+    <dd>See the <a href="#fragmentShader-attribute">fragmentShader</a>
+     attribute discussion.
    </dl>
 
    <dl>
@@ -11987,7 +11977,7 @@ double turbulence(int nColorChannel, double *point, double <a
      &lt;box&gt;? [ detached | attached ]?</code>
 
     <dd>See the <a href="#vertexMesh-attribute">vertexMesh</a> attribute
-     discussion
+     discussion.
    </dl>
 
    <dl>
@@ -12079,8 +12069,27 @@ double turbulence(int nColorChannel, double *point, double <a
    </div>
   </div>
 
-  <h4 id=vertexMesh-attribute><span class=secno>32.0.1. </span>The ‘<code
-   class=property>vertexMesh</code>’ attribute</h4>
+  <h3 id=fragmentShader-attribute><span class=secno>32.1. </span>The ‘<code
+   class=property>fragmentShader</code>’ attribute</h3>
+
+  <p class=todo>The introduced function mix(...) needs to be described
+
+  <p>There are two forms for the fragment shader:
+
+  <ol>
+   <li>direct shader reference with a <code>&lt;uri&gt;</code>
+
+   <li> The shader at &lt;uri&gt; provides the implementation for the
+    <code>feCustom</code> fragment shader. If the shader cannot be retrieved,
+    or if the shader cannot be loaded or compiled because it contains
+    erroneous code, the shader is a <a href="#default-shaders">pass
+    through</a>. Otherwise, the fragment shader is invoked for each of the
+    pixels during the rasterization phase that follows the vertex shader
+    processing.
+  </ol>
+
+  <h3 id=vertexMesh-attribute><span class=secno>32.2. </span>The ‘<code
+   class=property>vertexMesh</code>’ attribute</h3>
 
   <p>The <code>&lt;feCustom&gt;</code>‘<code class=css>s
    </code>’vertexMesh' attribute defines the granularity of vertices in the
@@ -12183,7 +12192,7 @@ double turbulence(int nColorChannel, double *point, double <a
 &lt;/div&gt;</pre>
   </div>
 
-  <h3 id=shader-inputs><span class=secno>32.1. </span>Shader inputs in filter
+  <h3 id=shader-inputs><span class=secno>32.3. </span>Shader inputs in filter
    graph</h3>
 
   <p>When an <code>feCustom</code> filter primitive is used in a filter
