@@ -3,6 +3,10 @@ Changes for Filter Effects specification
 
 2012-06-19  Dirk Schulze  <dschulze@adobe.com>
 
+- added new paragraph about fragmentShader attribute
+
+2012-06-19  Dirk Schulze  <dschulze@adobe.com>
+
 - *-color properties follow the syntax of CSS Values and Units now
 
 2012-06-19  Dirk Schulze  <dschulze@adobe.com>
